// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default SelectField component 1`] = `
<Field
  error={null}
  errorIcon={
    <IconError
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help={null}
  hideRequired={false}
  htmlFor="select-id"
  isInline={false}
  isInvalid={false}
  isLabelHidden={false}
  label="Label"
  labelAttrs={Object {}}
  required={false}
  showOptional={false}
>
  <Select
    ariaLabel="Label"
    defaultValue="blue"
    disabled={false}
    id="select-id"
    isInvalid={false}
    variant="default"
  >
    <Option
      disabled={false}
      display="Blue"
      value="blue"
    />
    <Option
      disabled={false}
      display="Green"
      value="green"
    />
    <Option
      disabled={false}
      display="Purple"
      value="purple"
    />
    <Option
      disabled={false}
      display="Red"
      value="red"
    />
    <Option
      disabled={false}
      display="Violet"
      value="violet"
    />
  </Select>
</Field>
`;

exports[`should render a default SelectField component with attributes spread onto the select 1`] = `
<Field
  error={null}
  errorIcon={
    <IconError
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help={null}
  hideRequired={false}
  htmlFor="select-id"
  isInline={false}
  isInvalid={false}
  isLabelHidden={false}
  label="Label"
  labelAttrs={Object {}}
  required={false}
  showOptional={false}
>
  <Select
    ariaLabel="Label"
    defaultValue="blue"
    disabled={false}
    id="select-id"
    isInvalid={false}
    onClick={[Function]}
    variant="default"
  >
    <Option
      disabled={false}
      display="Blue"
      value="blue"
    />
    <Option
      disabled={false}
      display="Green"
      value="green"
    />
    <Option
      disabled={false}
      display="Purple"
      value="purple"
    />
    <Option
      disabled={false}
      display="Red"
      value="red"
    />
    <Option
      disabled={false}
      display="Violet"
      value="violet"
    />
  </Select>
</Field>
`;
